--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -120,7 +120,6 @@ set_real_ip_from 2401:c080:1c02:2d4::;
 set_real_ip_from 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 set_real_ip_from 2402:1f00:8000:239::;
 set_real_ip_from 2402:1f00:8100:400::9;
-set_real_ip_from 2407:1c00:6100:5640::;
 set_real_ip_from 2407:3640:2207:8882::1;
 set_real_ip_from 2407:3640:2259:6302::1;
 set_real_ip_from 2407:3641:2259:8208::1;
@@ -327,6 +326,7 @@ set_real_ip_from 2620:7:6001::ffff:c759:e657;
 set_real_ip_from 2620:7:6001::ffff:c759:e658;
 set_real_ip_from 2620:7:6001::ffff:c759:e659;
 set_real_ip_from 2620:95:4007::111;
+set_real_ip_from 2800:ba0:6:c1::4858;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
@@ -355,6 +355,7 @@ set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
 set_real_ip_from 2a02:16d0:0:5::1;
+set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
@@ -387,7 +388,6 @@ set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 set_real_ip_from 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
-set_real_ip_from 2a03:6f20:531::254;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
 set_real_ip_from 2a03:e600:100::3;
@@ -407,7 +407,6 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
-set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:108:a34f::1;
 set_real_ip_from 2a04:52c0:116:e0e3::1;
@@ -691,7 +690,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
-set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -755,6 +753,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:222;
 set_real_ip_from 2a12:a800:2:1:45:138:16:230;
 set_real_ip_from 2a12:a800:2:1:45:138:16:231;
 set_real_ip_from 2a12:a800:2:1:45:138:16:239;
+set_real_ip_from 2a12:a800:2:1:45:138:16:240;
 set_real_ip_from 2a12:a800:2:1:45:138:16:248;
 set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
@@ -767,7 +766,10 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:169;
 set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
+set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
+set_real_ip_from 2a12:a800:2:1:45:141:215:56;
+set_real_ip_from 2a12:a800:2:1:45:141:215:61;
 set_real_ip_from 2a12:a800:2:1:45:141:215:62;
 set_real_ip_from 2a12:a800:2:1:45:141:215:63;
 set_real_ip_from 2a12:a800:2:1:45:141:215:80;
