--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -60,9 +60,7 @@ set_real_ip_from 2001:67c:e28:1::100;
 set_real_ip_from 2001:67c:e28:1::101;
 set_real_ip_from 2001:67c:e28:1::102;
 set_real_ip_from 2001:67c:e28:1::103;
-set_real_ip_from 2001:67c:e28:1::2;
 set_real_ip_from 2001:67c:e28:1::3;
-set_real_ip_from 2001:67c:e28:1::4;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:173;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:174;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:175;
@@ -154,6 +152,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -192,6 +191,7 @@ set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
+set_real_ip_from 2605:6400:30:f3d3:7c3:507c:6f32:c132;
 set_real_ip_from 2605:6400:30:f414:42ce:c612:dab8:1337;
 set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
@@ -692,6 +692,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b30b:1337:10;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
